// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PureTaskListComponent Default 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-pure-task-list
      ng-reflect-tasks="[object Object],[object Object"
    >
      <div
        class="list-items"
      >
        
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        
        
      </div>
    </app-pure-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots PureTaskListComponent Empty 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-pure-task-list
      ng-reflect-loading="false"
      ng-reflect-tasks=""
    >
      <div
        class="list-items"
      >
        
        
        <div
          class="wrapper-message"
        >
          <span
            class="icon-check"
          />
          <div
            class="title-message"
          >
            You have no tasks
          </div>
          <div
            class="subtitle-message"
          >
            Sit back and relax
          </div>
        </div>
        
      </div>
    </app-pure-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots PureTaskListComponent Loading 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-pure-task-list
      ng-reflect-loading="true"
      ng-reflect-tasks=""
    >
      <div
        class="list-items"
      >
        
        
        
        <div>
          
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
        </div>
      </div>
    </app-pure-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots PureTaskListComponent With Pinned Tasks 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-pure-task-list
      ng-reflect-tasks="[object Object],[object Object"
    >
      <div
        class="list-items"
      >
        
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_PINNED"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        
        
      </div>
    </app-pure-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots Task Archived 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item TASK_ARCHIVED"
    >
      <label
        class="checkbox"
      >
        <input
          checked=""
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots Task Default 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots Task Pinned 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item TASK_PINNED"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;
